--- a/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
+++ b/content/post/2019-10-26-líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu.Rmd
@@ -1,8 +1,7 @@
 ---
 title: Líkan af íbúðarhúsnæði á höfuðborgarsvæðinu
 author: Viðar
-date: '2019-10-26'
-draft: true
+date: '2020-01-17'
 slug: líkan-af-íbúðarhúsnæði-á-höfuðborgarsvæðinu
 categories:
   - forecast
@@ -39,11 +38,11 @@ library(tidymodels)
 
 ```
 
-Fyrir stuttu síðan tók ég saman gögn um hámarkshlutfall sem íslenskar fjármálastofnanir lána til fasteignakaupa. Hærra lánshlutfall þýðir að fasteignakaupendur þurfa að leggja til minna eigið fé við fasteignakaup en ella. Það gæti aukið eftirspurn eftir fasteignum og þanni þrýst upp verði. Hér að neðan verða gögnin skoðuð og stuðst við tölfræðilíkön, VAR eða VEC (hvort sem hentar betur), til að varpa ljósi á áhrif hærra lánshlutfalls á fasteignaverð. Þá mun ég einnig nota líköknin til að framkvæmar spár næstu 24 mánuðina.
+Fyrir stuttu síðan tók ég saman gögn um hámarkshlutfall sem íslenskar fjármálastofnanir lána til fasteignakaupa. Hærra lánshlutfall þýðir að fasteignakaupendur þurfa að leggja til minna eigið fé við fasteignakaup en ella. Það gæti aukið eftirspurn eftir fasteignum og þannig þrýst upp verði. Hér að neðan verða gögnin skoðuð og stuðst við tölfræðilíkön, VAR eða VEC (hvort sem hentar betur), til að varpa ljósi á áhrif hærra lánshlutfalls á fasteignaverð. Þá mun ég einnig nota líkönin til að framkvæmar spár næstu 24 mánuðina.
 
 
-## Gögn
-Gögnin sem ég nota eru fengin úr ólíkum áttum. Allt eru þetta mánaðarleg gögn. Fyrir verð á íbúðarhúsnæði nota ég vísitölu íbúðaverðs á höfuðborgarsvæðinu sem Þjóðskrá gefur út. Þá er ég með upplýsingar um skuldir heimilana sem ég fékk hjá Seðlabanka Íslands. Þetta eru allar skuldir heimila en ekki aðeins húsnæðisskuldir. Ég geng út frá því í greiningunni að þessi tímaröð og sú sem ætti aðeins við um lán til fasteignakaupa séu nátengdar (svo þarf ekki að vera). Þá er ég með upplýsingar um hámarks lánshlutfall sem bankarnir þrír ásamt Íbúðalánasjóði lána til fasteignakaupa, sjá [hér](https://drive.google.com/open?id=1rqTnfF3TyLHb_mClsCPYEfMnhj6oGmCc). Þessum gögnum safnaði ég af [Vefsafn.is](www.vefsafn.is). Ekki voru til samfelldar upplýsingar af vefsvæðum gömlu bankanna og því gat verið að ég hafði upplýsingar um lánshlutfall í október en síðan ekkert fyrr en í febrúar árið eftir. Ef breytingar áttu sér stað á tímabilinu þurfti ég að geta mér til um hvenær þær breytingar áttu sér stað. Athugasemdir um söfnun þessara gagna er að vinna í Excel skjalinu sem ég hlekkjaði á hér að ofan. Þá er ég með lægstu vexti sem eru í boði til fasteignakaupa, útborguð heildarlaun og vísitölu húsaleigu fyrir landið allt. Þetta eru ekki fullkomin gögn, t.d. væri betra að hafa vísitölu leiguhúsnæðis aðeins fyrir höfuðborgarsvæðið og alveg aftur til 1994. 
+## Gögnin
+Gögnin sem ég nota eru fengin úr nokkrum áttum. Allt eru þetta mánaðarleg gögn. Fyrir verð á íbúðarhúsnæði nota ég vísitölu íbúðaverðs á höfuðborgarsvæðinu sem Þjóðskrá gefur út. Þá er ég með upplýsingar um skuldir heimila sem ég fékk hjá Seðlabanka Íslands. Þetta eru allar skuldir heimila en ekki aðeins húsnæðisskuldir. Ég geng út frá því í greiningunni að þessi tímaröð og sú sem ætti aðeins við um lán til fasteignakaupa séu nátengdar (svo þarf ekki að vera). Þá er ég með upplýsingar um hámarks lánshlutfall sem bankarnir þrír ásamt Íbúðalánasjóði lána til fasteignakaupa, sjá [hér](https://drive.google.com/open?id=1rqTnfF3TyLHb_mClsCPYEfMnhj6oGmCc). Þessum gögnum safnaði ég af [Vefsafn.is](www.vefsafn.is). Ekki voru til samfelldar upplýsingar af vefsvæðum gömlu bankanna og því gat verið að ég væri með upplýsingar um lánshlutfall í október en síðan ekkert fyrr en í febrúar árið eftir. Ef breytingar áttu sér stað á tímabilinu þurfti ég að geta mér til um hvenær þær breytingar áttu sér stað. Athugasemdir um söfnun þessara gagna er að finna í Excel skjalinu sem ég hlekkjaði á hér að ofan. Þá er ég með lægstu vexti sem eru í boði til fasteignakaupa, útborguð heildarlaun og vísitölu húsaleigu fyrir landið allt. Þetta eru ekki fullkomin gögn, t.d. væri betra að hafa vísitölu leiguhúsnæðis aðeins fyrir höfuðborgarsvæðið og alveg aftur til 1994. 
 
 
 ## Grafísk greining
@@ -115,8 +114,7 @@ gogn_graph %>%
 Næst sýni ég dreifingu eftir hámarks lánshlutfalli. Hér mætti einnig skoða meðallánshlutfall sem lánastofnanir buðu. Ég ákvað þó að fara þá leið í þessari greiningu að nota hæsta hlutfallið sem var í boði á hverjum tíma. Munurinn á hámarkshlutfalli og meðalhlutfalli (banka, lífeyrissjóða og ÍLS) er lítill.  
 Ég er almennt ekki hlynntur því að birta gröf sem sýnir samband tveggja breyta þegar vitað er að aðrar breytur kunna að hafa áhrif. Ástæðan er sú að það er auðvelt að sýna jákvætt samband milli tveggja breyta en sambandið hverfur eða jafnvel breytir um formerki við það eitt að taka tillit til þriðju breytunnar. Hér geri ég þó undantekningu með því að sýna hversu mikið fasteignaverð hefur hækkað á mismunandi tímum eftir því hvert hámarkslánshlutfall var.  
 
-Neðangreint graf kallst box-plot. Box plot samanstendur af *hinges* og *whiskers*. Hinges eru efri og neðri mörk kassans. Efri mörkin eru efri fjórðungsmörk og neðri mörkin eru neðri fjórðungsmörk dreifingarinnar. Neðri fjórðungsmörk eru skilgreind á þann hátt að 25% gildanna (tólf mánað breyting fasteignaverð í þessu dæmi) eru undir neðri fjórðungsmörkum. Á sama hátt eru 25% gildanna yfir efri fjórðungsmörkunum.   
-Whiskers eru lóðréttu strikin sem koma upp úr og niður úr boxinu. Efra strikið nær frá efri mörkum boxins upp í hæsta gildið þó aldrei hærra en 1.5 x IQR (inter quartile range eða bil milli efri og neðri marka boxins), sama á við um neðra strikið. Gildi sem fara út fyrir *whiskers* kallst útlagar.
+*Neðangreint graf kallst box-plot. Box plot samanstendur af hinges og whiskers. Hinges eru efri og neðri mörk kassans. Efri mörkin eru efri fjórðungsmörk og neðri mörkin eru neðri fjórðungsmörk dreifingarinnar. Neðri fjórðungsmörk eru skilgreind á þann hátt að 25% gildanna (tólf mánað breyting fasteignaverð í þessu dæmi) eru undir neðri fjórðungsmörkum. Á sama hátt eru 25% gildanna yfir efri fjórðungsmörkunum. Whiskers eru lóðréttu strikin sem koma upp úr og niður úr boxinu. Efra strikið nær frá efri mörkum boxins upp í hæsta gildið þó aldrei hærra en 1.5 x IQR (inter quartile range eða bil milli efri og neðri marka boxins), sama á við um neðra strikið. Gildi sem fara út fyrir whiskers kallst útlagar.*
 
 
 ```{r}
@@ -256,7 +254,7 @@ coint_tafla %>%
 
 # VEC líkan
 
-Fyrir ykkur sem slepptuð ítarefninu þá var niðurstaðan sú að vegna langtímasambands á milli launa og fasteignaverðs annars vegar og leigu og fasteignaverðs hinsvegar, þá væri best að styðjast við VEC líkan.  
+Fyrir ykkur sem slepptuð ítarefninu þá var niðurstaðan sú að tvö langtímasambönd eru til staðar. Þar af leiðandi styðst ég við VEC líkan.  
 
 ```{r, vec}
 # Vel spec = "transitory" þar sem það er víst algengara í dag, sjá hér:
@@ -288,7 +286,7 @@ vec_irf <- tsDyn::irf(var_from_vec, n.ahead = n_ahead, ci = 0.8)
 
 *Athugið. Gröfin að neðan sýna viðbragð fasteignaverðs á höfuðborgarsvæðinu vegna skells (e. shock) í fimm breytum. Bláa svæðið í kringum viðbragðsfallið er 80% öryggisbil. Ég hallast að bayesískri tölfræði og þar með er ég frekar gagnrýninn á öryggisbil. Auk þess sé ég ekki ástæðu til að nota 95% frekar en 80%. Þegar ég tala um að áhrif séu marktæk þá er ég vissulega að lesa í öryggisbilin.*  
 
-Það sem lesa má út úr viðbragðsföllunum er að hækkun hámarkshlutfalls leiðir til hærra fasteignaverðs og hærri vextir leiða til lægra fasteignaverðs. Það sem vekur athygli er mat líkansins á áhrifum aukinnar skuldsetningar. Áhrifin eru jákvæð fyrsta mánðinn en lítil sem engin eftir það. Ástæðan fyrir þessu kann að vera sú að hámarkslánshlutfall hækkar mikið fyrir hrun sem leiðir til aukinnar skuldsetningar. Áhrifin af aukinni skuldsetningu koma því hugsanlega fram að einhverju leyti í gegnum áhrif hámarkshlutfalls. Hitt sem kemur að óvart er áhrif leigu á fasteignaverð. Hér virðist líkanið pikka upp mikla hækkun leigu á sama tíma og verð fasteigna lækkaði töluvert eftir hrun. Hér mætti bæta við dummy-breytum sem ná hrun-tímabilið. Ástæðan fyrir því að ég geri það ekki hér er að það er kannski ekki auðvelt að skilgreina hvaða tímabil hrunið nær yfir. Þá virðast laun hafa áhrif til hækkunar. Ég skrifað um það áður (á öðrum vettvangi) að launahækkanir geti varla haft áhrif til hækkunar fasteignaverðs, í það minnsta ekki nema með mikilli töf. Ef laun hækka mikið á tíma t = 0 þá tekur tíma fyrir heimili að leggja til hliðar og safna fyrir íbúð. Launahækkun á tíma t = 0 leiðir þannig ekki til aukinnar eftirspurnar eftir fasteignum á tíma t = 0 (tími í mánuðum).  
+Það sem lesa má út úr viðbragðsföllunum er að hækkun hámarkshlutfalls leiðir til hærra fasteignaverðs og hærri vextir leiða til lægra fasteignaverðs. Það sem vekur athygli er mat líkansins á áhrifum aukinnar skuldsetningar. Áhrifin eru jákvæð fyrsta mánðinn en lítil sem engin eftir það. Ástæðan fyrir þessu kann að vera sú að hámarkslánshlutfall hækkar mikið fyrir hrun sem leiðir til aukinnar skuldsetningar. Áhrifin af aukinni skuldsetningu koma því hugsanlega fram að einhverju leyti í gegnum áhrif hámarkshlutfalls. Hitt sem kemur að óvart er áhrif leigu á fasteignaverð. Hér virðist líkanið pikka upp mikla hækkun leigu á sama tíma og verð fasteigna lækkaði töluvert eftir hrun. Hér mætti bæta við dummy-breytum sem ná hrun-tímabilið. Ástæðan fyrir því að ég geri það ekki hér er að það er kannski ekki auðvelt að skilgreina hvaða tímabil hrunið nær yfir. Þá virðast laun hafa áhrif til hækkunar. Ég skrifað um það áður (á öðrum vettvangi) að launahækkanir geti varla haft áhrif til hækkunar fasteignaverðs, nema þá með mikilli töf. Ef laun hækka mikið á tíma t = 0 þá tekur tíma fyrir heimili að leggja til hliðar og safna fyrir íbúð. Launahækkun á tíma t = 0 leiðir þannig ekki til aukinnar eftirspurnar eftir fasteignum á tíma t = 1,...X, þar sem X er lág tala (mælt í mánuðum).   
 
 
 ```{r vec_irf_plot}
@@ -343,9 +341,9 @@ gridExtra::grid.arrange(p1, p2, p3, p4, p5, ncol = 2, top = "Viðbragðsföll fy
 # Vélarnám
 Önnur leið til að kanna áhrif tiltekinna breyta á fasteignaverð er að styðjast við vélarnám (e. machine learning). Það getur verið gagnlegt til að ná utan um ólínuleg sambönd ef þau eru til staðar. Ein slík aðferð er random forest. Fyrir þá sem vilja lesa sig til random forest (eða aðra algorithma) þá er bókin *An Introduction to Statistical Learning* mjög góð byrjun. Bókin er aðgengileg [hér](http://faculty.marshall.usc.edu/gareth-james/ISL/index.html).
 
-## Variable importance með random forest, elastic net og Cubist
+## Variable importance með Random Forest, Elastic Net og Cubist
 Tree-based algorithmar líkt og random forest ráða illa við breytur sem trend-a. Því mun ég umbreyta vísitölunum í gagnasettinu þannig að þær lýsi tólf mánaða  breytingu.
-Random forest er samansafn af þúsundum ákvarðanatrjáa. Trén geta verið nokkuð ólík hvert öðru þó sum geta verið eins. Trén eru ólík á þann hátt að ekki eru sömu breytur notaðar til að búa til ákvarðanatréð. Þaðan kemur 'random' þátturinn.  
+Random forest er samansafn af þúsundum ákvarðanatrjáa. Trén geta verið nokkuð ólík hvert öðru þó sum geta verið eins. Trén eru ólík á þann hátt að ekki eru sömu breytur notaðar til að búa til hvert ákvarðanatréð. Þaðan kemur 'random' þátturinn.  
 Elastic net er línulegt líkan sem notar regularization. Með regularization á ég við að algorithminn getu bæði skalað niður stuðlamatið (beturnar) eða hent breytum alveg út (skalað stuðlana alveg niður núll).  
 Cubist er í mjög stuttur, og eflaust ónákvæmu máli, samblanda af ákvarðanatré og línulegu líkani. Nokkuð ítarlega er farið í gegnum Cubist í bókinni *Applied predictive modeling*. [Hér](https://static1.squarespace.com/static/51156277e4b0b8b2ffe11c00/t/56e3056a3c44d8779a61988a/1457718645593/cubist_BRUG.pdf) er kynning á Cubist eftir annan höfund bókarinnar.  
 
@@ -427,7 +425,7 @@ stopCluster(cl)
 ```
 
 
-Grafið að neðan sýnir þrjú líkön. Random forest, Cubist og Elastic net. Cubist virðist overfit-a á training settið (erfitt að greina á milli Cubist og raun á grafinu). Líkönunum þremur tekst þó ekki að útskýra hækkunina sem á sér stað frá miðju ári 2016 fram í ársbyrjun 2018. Þarna er eflaust hækkun sem ekki er skýrð af þeim breytum sem notaðar eru í líkönunum. Gráa svæðið er sá hluti gagnanna sem ekki var notaður við að tune-a líkönin. Eftir miklu hækkunina virðist cubist ná best utan um breytingu fasteignaverðs.  
+Grafið að neðan sýnir líkönin þrjú. Random forest, Cubist og Elastic net. Cubist virðist overfit-a á training settið (erfitt að greina á milli Cubist og raun á grafinu). Líkönunum þremur tekst þó ekki að útskýra hækkunina sem á sér stað frá miðju ári 2016 fram í ársbyrjun 2018 (hluti af test-settinu). Þarna er eflaust hækkun sem ekki er skýrð af þeim breytum sem notaðar eru í greiningunni. Gráa svæðið er sá hluti gagnanna sem ekki var notaður við að tune-a líkönin. Eftir miklu hækkunina virðist cubist ná best utan um breytingu fasteignaverðs.  
 
 
 ```{r training_error}
@@ -469,9 +467,9 @@ ggplot(df_pred,
 
 Næsta graf sýnir hversu mikilvægar viðkomandi breytur voru til að spá fyrir um tólf mánaða breytingu fasteignaverðs. Breytan **max_hlutfall** tekur aðeins fjögur gildi: 65%, 80%, 85% og 100% og bý ég til dummy breytu fyrir öll gildin (one hot encoding). Athugið að mikilvægi breytanna segir ekkert til um hvort áhrifin voru jákvæð eða neikvæð. Nokkur munur er á hvaða breytur eru mikilvægar til að spá fyrir fasteignaverð.
 
-Vextir eru lang mikilvægasta breytan fyrir Elastic net til að spá fyrir um hækkun fasteignaverðs. **max_hlutfall**, og þá sérstaklega 100% og 80% hlutföllin sem dummy breytur auk vaxta voru þrjár mikilvægustu breyturnar fyrir random forest. Tólf mánaða breyting launa, vextir og breyting útlána voru þrjár mikilvægustu  breyturnar yfrir Cubist.  
+Vextir eru lang mikilvægasta breytan fyrir Elastic net til að spá fyrir um hækkun fasteignaverðs. **max_hlutfall**, og þá sérstaklega 100% og 80% hlutföllin sem dummy breytur auk vaxta voru þrjár mikilvægustu breyturnar fyrir random forest. Tólf mánaða breyting launa, vextir og breyting útlána voru þrjár mikilvægustu  breyturnar fyrir Cubist.  
 
-Þó niðurstöðurnar eru nokkuð ólíkar milli líkana þá má greina einhvern samhljóm. Til að mynda eru vextir alltaf meðal þriggja mikilvægustu breytanna. Random forest er eina líkanið sem styðst eingöngu við ákvarðanatré og á því eflaust auðveldast með að ná upplýsingum úr max_hlutfall breytunni sem breytir aðeins um gildi þrisvar sinnum.  
+Þó niðurstöðurnar eru nokkuð ólíkar milli líkana þá má greina einhvern samhljóm. Til að mynda eru vextir alltaf meðal þriggja mikilvægustu breytanna. Random forest er eina líkanið sem styðst eingöngu við ákvarðanatré og á því eflaust auðveldast með að ná upplýsingum úr max_hlutfall breytunni sem breytir aðeins um gildi þrisvar sinnum á tímabilinu sem er til skoðunar.  
 
 ```{r vip}
 
@@ -485,7 +483,7 @@ gridExtra::grid.arrange(vip_enet, vip_rf, vip_cub, ncol = 3)
 
 
 # Spá um þróun fasteignaverðs
-Að ofan hef ég rýnt hvaða áhrif breyturnar hafa á fasteignaverð með VEC líkani. Einnig kannaði ég hvaða breytur voru mikilvægar til að útskýra fasteignaverð miðað við tvo öfluga algorithma. Að neðan mun ég nota VAR og VEC líkan til að framkvæma spá til næstu 12 mánaða.  
+Að ofan hef ég kannað hvaða áhrif breyturnar hafa á fasteignaverð meðal annars með VEC líkani. Einnig kannaði ég hvaða breytur voru mikilvægar til að útskýra fasteignaverð miðað við þrjá öfluga algorithma vélarnáms. Að neðan mun ég nota VAR og VEC líkan til að framkvæma spá til næstu 24 mánaða.  
 
 
 ## Spá með VEC líkani
@@ -608,4 +606,4 @@ Spárnar benda hvorugar til lækkunar fasteignaverðs á tímabilinu ágúst 201
 
 
 # Lokaorð
-Að ofan hef ég varið í gegnum hvaða áhrif mismunandi breytur hafa á fasteignaverð. Áhrifin eru meira og minna það sem búast mátti við. Spárnar eru nokkuð ólíkar þó báðar bendi til áframhaldandi hækkunar næstu tvö árin.  Ég hef ekki enn lagt mat á gætði spánna. Slíkt væri hægt að gera með time series cross-validation. Það er töluvert stærra verkefni.
+Að ofan hef ég varið í gegnum hvaða áhrif mismunandi breytur hafa á fasteignaverð. Áhrifin eru meira og minna það sem búast mátti við. Vélarnáms algorithmarnir gáfu ólíka niðurstöðu um hvaða breytur voru mikilvægastar. Möguleg ástæða er tiltölulega lítið gagnasett sem algorithmarnir virðast sumir overfit-a. Spárnar með VAR og VEC líkönunum eru nokkuð ólíkar þó báðar bendi til áframhaldandi hækkunar næstu tvö árin.  Ég hef ekki enn lagt mat á gæði spánna. Slíkt væri hægt að gera með time series cross-validation. 
